Make scct:test pass under sbt 0.12.2.
Same changes required for pandora/test are required for pandora/scct:test. In addition,
mongo/scct:test keeps complaining about not having sempahores, and forking tests help with that as
well, so adopt that for mongo/scct:test.

Closes:

PLATFORM-874 PLATFORM-963 #resolve